[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5.0"         # Global key event listening
lazy_static = "1.4"     # For creating global static variables safely

[dependencies.windows]
version = "0.60"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]